# libslmp2

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md  clean_backup_files.sh
doc/: .gitignore  Doxyfile  mainpage.dox
libmelcli/: CMakeLists.txt  config.cmake.in  config.h.in  libmain.c  libmelcli.def  melcli.c  melcli_priv.h
libmelcli/COMWrapper/: .gitignore  DllModule.cpp  DllModule.h  Factory.cpp  Factory.h  MELSECClient.cpp  MELSECClient.h  MelcliCOMWrapper.def  MelcliCOMWrapper.dsp  MelcliCOMWrapper.idl  MelcliCOMWrapper.rc  MelcliCOMWrapper.sln  MelcliCOMWrapper.vcxproj  MelcliCOMWrapper.vcxproj.filters  ReadMe.txt  RegUtil.cpp  RegUtil.h  StdAfx.cpp  StdAfx.h  StrUtil.cpp  StrUtil.h  resource.h
libmelcli/hdrsup/: stdint.h
libmelcli/include/melcli/: melcli.h  melcliapi.h  melclidef.h
libmelcli/win32rsrc/: resource.h  rsrc.rc
libslmp/: CMakeLists.txt  config.cmake.in  config.h.in  errmsg.c  libslmp.c  libslmp.def  slmp_intl.h  strlcpy.c
libslmp/CommandCodecGenerator/Ccgen/: Ccgen.clw  Ccgen.cpp  Ccgen.dsp  Ccgen.dsw  Ccgen.h  Ccgen.rc  Ccgen.reg  Ccgen.sln  Ccgen.vcxproj  Ccgen.vcxproj.filters  CcgenDoc.cpp  CcgenDoc.h  CcgenView.cpp  CcgenView.h  CmdElem.cpp  CmdElem.h  CmdObj.cpp  CmdObj.h  CodeGenerator.cpp  CodeGenerator.h  CommandView.cpp  CommandView.h  FieldObject.cpp  FieldObject.h  GenCodeView.cpp  GenCodeView.h  GlobalPropsView.cpp  GlobalPropsView.h  GroupObject.cpp  GroupObject.h  LeftView.cpp  LeftView.h  MainFrm.cpp  MainFrm.h  NewCmdDlg.cpp  NewCmdDlg.h  NewCmdElemDlg.cpp  NewCmdElemDlg.h  ReadMe.txt  StdAfx.cpp  (+2 more)
libslmp/CommandCodecGenerator/Ccgen/res/: Ccgen.rc2  ccgen.manifest
libslmp/CommandCodecGenerator/CgeFiles/: ClearError.cge  DualPortMemory.cge  ExtensionModule.cge  File.cge  InternalMemory.cge  NodeConnect.cge  NodeMonitoring.cge  ParameterSetting.cge  RemoteControl.cge  RemotePassword.cge  SelfTest.cge
libslmp/codec/command/: clearerr_codec.c  cmdcodec.c  cmdcodec_priv.h  dpmem_codec.c  extunit_codec.c  filecmd_codec.c  intmem_codec.c  nodeconn_codec.c  nodemon_codec.c  paramset_codec.c  remctrl_codec.c  rempswd_codec.c  selftest_codec.c
libslmp/codec/frame/: framecodec.c  framecodec.h
libslmp/codec/word/: wordcodec.c  wordcodec.h
libslmp/frameio/: frameio.c
libslmp/glthread/: lock.c  lock.h  threadlib.c
libslmp/include/slmp/: _poppack.h  _pushpack4.h  slmp.h  slmpapi.h  slmpcodec.h  slmpdef.h  slmperr.h  slmpframe.h  slmpfrmio.h  slmpinit.h  slmpmem.h  slmppktio.h  slmpserver.h
libslmp/include/slmp/codec/: clearerr_codec.h  cmdcodec.h  dpmem_codec.h  extunit_codec.h  filecmd_codec.h  intmem_codec.h  nodeconn_codec.h  nodemon_codec.h  paramset_codec.h  remctrl_codec.h  rempswd_codec.h  selftest_codec.h
libslmp/include/slmp/command/: clearerr.h  cmdcode.h  cmdhdr.h  dpmem.h  extunit.h  filecmd.h  intmem.h  nodeconn.h  nodemon.h  paramset.h  remctrl.h  rempswd.h  selftest.h
libslmp/include/slmp/packetio/: tcpip.h  udpip.h
libslmp/memory/: memory.c  memory_intl.h
libslmp/packetio/: pktio.c  pktio_priv.h  tcpip.c  tcpip_priv.h  udpip.c  udpip_priv.h
libslmp/server/: server.c  server_priv.h
libslmp/tsd/: tsd.c  tsd.h
libslmp/win32rsrc/: rsrc.rc
melcli4j/: nb-configuration.xml  nbactions.xml  pom.xml
melcli4j/src/main/java/net/libslmp/melcli4j/: Error.java  MELSECClient.java  MELSECClientBuilder.java  MELSECClientImpl.java  MelcliLibrary.java  MelcliLibraryWin32.java  Protocol.java  Station.java  Timeout.java  TypeName.java
melcli4j/src/main/javadoc/: overview.html
melcli4j/src/test/java/: Test1.java
samples/: CMakeLists.txt
samples/codecfcn/: CMakeLists.txt  codecfcn.c
samples/echocli/: CMakeLists.txt  echocli.c
samples/echosvr/: CMakeLists.txt  echosvr.c
samples/mcdemo/: CMakeLists.txt  mcdemo.c
samples/svrskel/: CMakeLists.txt  server.c  server.h  svrmain.c  svrskel.c
samples/vb6demo/: DlgBatchRead.frm  DlgBatchRead.frx  DlgBatchWrite.frm  DlgInsert.frm  DlgRandomRead.frm  DlgRandomRead.frx  DlgRandomWrite.frm  DlgRemoteControl.frm  FrmMain.frm  FrmMain.frx  Program.bas  VB6Demo.vbp  VB6Demo.vbw
samples/win32rsrc/: resource.h  rsrc.rc
vs6/: CodecFuncsSample.dsp  EchoClientSample.dsp  EchoServerSample.dsp  MELSECClientSample.dsp  SLMPServerSkeleton.dsp  libmelcli.dsp  libslmp.dsp  libslmp2.dsw
vs6/libmelcli/: config.h
vs6/libslmp/: config.h
